output.txt
src\hardcoded.java:8: error: class harddcoded is public, should be declared in a file named harddcoded.java
public class harddcoded {
       ^
1 error
